--- a/ru/actualites.html
+++ b/ru/actualites.html
@@ -125,7 +125,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-2"><strong>Жан-Луи Башле в Новочеркасске</strong></h6>
                         
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="page70.html" target="_blank">ЧИТАТЬ</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="actualites-19.html" target="_blank">ЧИТАТЬ</a></div>
                     </div>
                 </div>
             </div>
@@ -573,7 +573,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r1DBqQFP6vG9R6XwGRILUPtu1MG7s8u3ZYNK80cBTfq7OzyDbo8WkP9t3J1iIvVnhNb/0U/Ya2lM3FBh/MIozKbArFiNDCwu7zLkXgL7K2Dja9uIf4EunkdlWARo8I4X">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="mKJSlRjHPS5ghPZ10t44V6BWADoN5k8JqiLS8GTBQQj9K5mGjaPa0IK3mlYU7ghQ0wYE9lIpuaPpK0OtkCKU5vZGV1HacdYrAAV2qeb8ChlK4AsHB6ucHVcfugZtMvTB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -673,7 +673,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
