--- a/ru/actualites-5.html
+++ b/ru/actualites-5.html
@@ -132,12 +132,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tr3FV50tw1" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tr6girTke6" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#tr3FV50tw1" data-bs-target="#tr3FV50tw1"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#tr6girTke6" data-bs-target="#tr6girTke6"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -239,11 +239,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tr3FV50tw1">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tr6girTke6">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tr3FV50tw1">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tr6girTke6">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -283,7 +283,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fQ8PIwVlQm2vhuhmShd5xm0n8cwEg0Yye3oNQVPPAeu9YnQpe9uXVA63S6wMy5ctRpj5om4GjvCfdxASXV8AOhfryOVg3UX5dfJT/ZNVe2XNxm6Pef8l/QNVAK94OJYe">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="mB+arf/XYUigD5asJ2Bvuy73p5LNPUap4jHWBI9ru6z2KnV9newku+ZJojPcmo+wVHjBeSI5WyJShzXR5aDAADSI2CEUl3m33t0phR+ePVkKKA7YIMt83OX6I47T6JNa">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -338,7 +338,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
@@ -383,7 +383,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
