--- a/ru/projets-3.html
+++ b/ru/projets-3.html
@@ -176,12 +176,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tr3FZmM0D1" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tr6goI0ANR" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tr3FZmM0D1" data-bs-target="#tr3FZmM0D1"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tr3FZmM0D1" data-bs-target="#tr3FZmM0D1"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tr3FZmM0D1" data-bs-target="#tr3FZmM0D1"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tr3FZmM0D1" data-bs-target="#tr3FZmM0D1"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tr3FZmM0D1" data-bs-target="#tr3FZmM0D1"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tr6goI0ANR" data-bs-target="#tr6goI0ANR"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tr6goI0ANR" data-bs-target="#tr6goI0ANR"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tr6goI0ANR" data-bs-target="#tr6goI0ANR"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tr6goI0ANR" data-bs-target="#tr6goI0ANR"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tr6goI0ANR" data-bs-target="#tr6goI0ANR"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -213,11 +213,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tr3FZmM0D1">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tr6goI0ANR">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tr3FZmM0D1">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tr6goI0ANR">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -235,7 +235,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="o1sp3JyH87VNtFxS8Z7IfHNwFG0DvZMLgeuvv6ANCv9CajKIXKQpKPhjvj8+hARD/xBh9E72BhZckBqQU6biWNlDitMttrMSlsZJFdoMI7aRnOV6TMJmCIBWi/6GqLFe">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="YLTa4fBsRVDLB/Qg2ypGdFP3BIhy6yw1n6ExyuAAyNBTzsT1t1umul/DO/+hDMqmmIc1Qx0Db0mtwRh3DDFwPy4tuRxF7DgnBIOYNgQMVrzYocKpGuaKEqTfR6hKNjA/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -290,7 +290,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
@@ -335,7 +335,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
